<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="temp_track_name">Название трека</string>
    <string name="temp_artist_name">Название исполнителя</string>
    <string name="temp_time">2:55</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="tabFavorite">Избранные треки</string>
    <string name="tabPlaylists">Плейлисты</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="emptyFavorite">Ваша медиатека пуста</string>
    <string name="emptyPlaylist">Вы не создали\nни одного плейлиста</string>

    <string name="theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="shareUrl">https://practicum.yandex.ru/android-developer/</string>
    <string name="supportTitleMail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supportBodyMail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="supportAddressMail">iMondzy@yandex.ru</string>
    <string name="userAgreementUrl">https://yandex.ru/legal/practicum_offer/</string>

    <string name="createPlaylistNameHint">Название*</string>
    <string name="createPlaylistDescriptionHint">Описание</string>
    <string name="createPlaylistCreateButton">Создать</string>
    <string name="createPlaylistDialogTitle">Завершить создание плейлиста?</string>
    <string name="createPlaylistDialogDescription">Все несохраненные данные будут потеряны</string>
    <string name="createPlaylistDialogCancel">Отмена</string>
    <string name="createPlaylistDialogConfirm">Завершить</string>
    <string name="editPlaylist">Редактировать плейлист</string>
    <string name="editPlaylistSave">Сохранить</string>

    <string name="playerAddToPlaylistTitle">Добавить в плейлист</string>

    <string name="playlistDeleteTrack">Хотите удалить трек?</string>
    <string name="playlistDeletePlaylist">Хотите удалить плейлист «%1$s»?</string>
    <string name="playlistShare">Поделиться</string>
    <string name="playlistEdit">Редактировать информацию</string>
    <string name="playlistDelete">Удалить плейлист</string>
    <string name="playlistYes">ДА</string>
    <string name="playlistNo">НЕТ</string>
    <string name="title_activity_main123">MainActivity123</string>
</resources>
