<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    android:orientation="vertical"
    tools:context="com.practicum.playlistmaker.settings.ui.activity.SettingsFragment">

    <LinearLayout style="@style/ToolBarLinearLayout">

        <!--<Button
            android:id="@+id/btn_back"
            style="@style/BackButtonStyle" />-->

        <TextView
            android:id="@+id/settings"
            style="@style/ToolBarTextView"
            android:text="@string/settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_padding"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/theme"
            android:textColor="?attr/settingsColorTextPrimary"
            android:textFontWeight="400"
            android:textSize="@dimen/default_text_size"
            android:thumb="@drawable/custom_switch_thumb"
            android:track="@drawable/custom_switch_track"
            android:trackTintMode="src_over"
            app:thumbTint="@color/switch_thumb_color"
            app:thumbTintMode="src_over"
            app:trackTint="@color/switch_track_color" />

        <Button
            android:id="@+id/share"
            style="@style/SettingsButtonStyle"
            android:paddingEnd="2dp"
            android:text="@string/share"
            app:icon="@drawable/ic_share" />

        <Button
            android:id="@+id/support"
            style="@style/SettingsButtonStyle"
            android:text="@string/support"
            app:icon="@drawable/ic_support" />

        <Button
            android:id="@+id/user_agreement"
            style="@style/SettingsButtonStyle"
            android:paddingEnd="6dp"
            android:text="@string/user_agreement"
            app:icon="@drawable/ic_user_agreement" />

    </LinearLayout>

</LinearLayout>