<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/default_padding">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/app_name"
                android:textColor="?attr/colorTitle"
                android:textFontWeight="500"
                android:textSize="@dimen/primary_text_size" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="28dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/search"
                style="@style/MainButtonStyle"
                android:text="@string/search"
                app:icon="@drawable/ic_search" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_padding" />

            <Button
                android:id="@+id/media"
                style="@style/MainButtonStyle"
                android:text="@string/media"
                app:icon="@drawable/ic_media" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_padding" />

            <Button
                android:id="@+id/settings"
                style="@style/MainButtonStyle"
                android:text="@string/settings"
                app:icon="@drawable/ic_settings" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>