<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    android:orientation="vertical"
    tools:context="com.practicum.playlistmaker.search.ui.activity.SearchFragment">

    <LinearLayout style="@style/ToolBarLinearLayout">

        <TextView
            android:id="@+id/search"
            style="@style/ToolBarTextView"
            android:text="@string/search" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="@dimen/default_padding"
        android:paddingVertical="8dp">

        <EditText
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_search_field"
            android:drawableStart="@drawable/ic_search_edit_text"
            android:drawablePadding="8dp"
            android:drawableTint="?attr/colorIcon"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical="11dp"
            android:paddingStart="13dp"
            android:paddingEnd="35dp"
            android:singleLine="true"
            android:textColor="@color/dark"
            android:textColorHint="?attr/colorIcon"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:textFontWeight="400"
            android:textSize="@dimen/default_text_size" />

        <ImageView
            android:id="@+id/clearBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:paddingStart="7dp"
            android:paddingEnd="@dimen/default_padding"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="124dp"
            android:layout_gravity="center_horizontal"
            android:indeterminateTint="@color/blue"
            tools:visibility="visible"/>

        <LinearLayout
            android:id="@+id/placeholder_nothing_found"
            style="@style/SearchErrorLinearLayout"
            tools:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="?attr/drawable_nothing_found"/>

            <TextView
                style="@style/SearchTextView"
                android:text="@string/nothing_found" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/placeholder_no_internet"
            style="@style/SearchErrorLinearLayout"
            tools:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="?attr/drawable_no_internet" />

            <TextView
                style="@style/SearchTextView"
                android:text="@string/no_internet" />

            <Button
                android:id="@+id/update_btn"
                style="@style/SearchButton"
                android:text="@string/update" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/track_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:visibility="gone">

            <TextView
                style="@style/SearchTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/you_search"
                android:textFontWeight="500" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/track_history"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/clear_history"
                style="@style/SearchButton"
                android:text="@string/clear_history" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
