<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    android:orientation="vertical">

    <LinearLayout style="@style/ToolBarLinearLayout">

        <Button
            android:id="@+id/btn_back"
            style="@style/BackButtonStyle" />

        <TextView
            android:id="@+id/settings"
            style="@style/ToolBarTextView"
            android:text="@string/settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_padding"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <!--        <FrameLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:layout_weight="1">-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginVertical="@dimen/settings_button_padding"-->
        <!--                android:layout_gravity="center|start"-->
        <!--                android:text="@string/theme"-->
        <!--                android:textColor="?attr/colorTextPrimary"-->
        <!--                android:fontFamily="@font/ys_display_regular"-->
        <!--                android:textFontWeight="400"-->
        <!--                android:textSize="@dimen/default_text_size"/>-->

        <!--            <Switch-->
        <!--                android:id="@+id/switch_theme"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_gravity="center|end"-->
        <!--                tools:ignore="UseSwitchCompatOrMaterialXml"-->
        <!--                android:thumb="@drawable/custom_switch_thumb"-->
        <!--                android:thumbTint="@color/switch_thumb_color"-->
        <!--                android:thumbTintMode="src_over"-->
        <!--                app:track="@drawable/custom_switch_track"-->
        <!--                android:trackTint="@color/switch_track_color"-->
        <!--                android:trackTintMode="src_over"-->
        <!--                android:checked="false"/>-->

        <!--        </FrameLayout>-->

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/theme"
            android:textColor="?attr/colorTextPrimary"
            android:textFontWeight="400"
            android:textSize="@dimen/default_text_size"
            android:thumb="@drawable/custom_switch_thumb"
            android:track="@drawable/custom_switch_track"
            android:trackTintMode="src_over"
            app:thumbTint="@color/switch_thumb_color"
            app:thumbTintMode="src_over"
            app:trackTint="@color/switch_track_color" />

        <!--        <com.google.android.material.switchmaterial.SwitchMaterial-->
        <!--        android:thumb="@drawable/custom_switch_thumb"-->
        <!--        app:thumbTint="@color/switch_thumb_color"-->
        <!--        app:thumbTintMode="src_over"-->
        <!--        android:track="@drawable/custom_switch_track"-->
        <!--        app:trackTint="@color/switch_track_color"-->
        <!--        android:trackTintMode="src_over"-->
        <!--        android:checked="false" />-->

        <Button
            android:id="@+id/share"
            style="@style/SettingsButtonStyle"
            android:paddingEnd="2dp"
            android:text="@string/share"
            app:icon="@drawable/ic_share" />

        <Button
            android:id="@+id/support"
            style="@style/SettingsButtonStyle"
            android:text="@string/support"
            app:icon="@drawable/ic_support" />

        <Button
            android:id="@+id/user_agreement"
            style="@style/SettingsButtonStyle"
            android:paddingEnd="6dp"
            android:text="@string/user_agreement"
            app:icon="@drawable/ic_user_agreement" />

    </LinearLayout>

</LinearLayout>